--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
   <!-- My Style -->
   <link rel="stylesheet" href="./style/main.css" />
 </head>
@@ -18,7 +19,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/hbd.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -69,9 +70,12 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <a href="carta.html">
+                    <button class="birthday-button">AO FINAL, ABRA SUA CARTINHA</button>
+                </a>
             </div>
         </div>
+        
 
         <div class="seven">
             <div class="baloons">
@@ -141,12 +145,7 @@
             </svg>
         </div>
 
-        <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
-            <p class="last-smile">:)</p>
-        </div>
-    </div>
+
 
 </body>
     <!-- Greensock -->
