--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>FELIZ ANIVERSÁRIO!!! :)</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,36 +27,36 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                OI
+                <span id="name">HELO</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">Primeiramente, nós te amamos!</p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>É seu aniversário :D</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                    “Parabéns tia AIO!! Você é bonita, boazinha, legal e cheirosa. Beijo Arthur
                 </p>
-                <p class="fake-btn">Send</p>
+                <p class="fake-btn">Enviar</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">Era o que faríamos</p>
+            <p class="idea-2">Mas paramos</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
+                Percebemos que queríamos algo<br>
+                <strong>ESPECIAL</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">Porque</p>
             <p class="idea-5">
-                You are Special
+                Você é especial
                 <span>:)</span>
             </p>
             <p class="idea-6">
