--- a/carta.html
+++ b/carta.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <audio class="song" loop autoplay>
-    <source src="./music/hbd.mp3" />
+    <source src="./music/pbs.mp3" />
     Your browser isn't invited for super fun audio time.
   </audio>
   <meta charset="UTF-8">
@@ -86,17 +86,8 @@
     <div class="card">Te amamos muito, helo!! - Titias</div>
 
     <div class="card">
-      helo, helo, heloooo (voz da larinha) feliz aniversário, minha amiga amada!
-
-      muito obrigada pela sua amizade e também quero dizer o tanto que eu te amo e o quanto sou feliz por ter você na minha vida.
-
-      que hoje — e todos os dias que vierem — você esteja rodeada de tudo que te faz sorrir. que nunca falte saúde, paz, amor e muito carinho. que seus caminhos sejam sempre iluminados, e que você continue sendo essa amiga incrível e generosa que é.
-
-      te amo demais, de um jeito que nem dá pra explicar. obrigada por existir e por dividir a vida comigo.
-
-      com todo meu coração: feliz vida, amiga. que Deus te abençoe sempre!- carol saphadynne
+  helo, helo, heloooo (voz da larinha) feliz aniversário, minha amiga amada!  muito obrigada pela sua amizade e também quero dizer o tanto que eu te amo e o quanto sou feliz por ter você na minha vida. que hoje — e todos os dias que vierem — você esteja rodeada de tudo que te faz sorrir. que nunca falte saúde, paz, amor e muito carinho. que seus caminhos sejam sempre iluminados, e que você continue sendo essa amiga incrível e generosa que é. te amo demais, de um jeito que nem dá pra explicar. obrigada por existir e por dividir a vida comigo.      com todo meu coração: feliz vida, amiga. que Deus te abençoe sempre!- carol saphadynne
     </div>
-
   </div>
 </body>
 </html>
