--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    “Parabéns tia AIO!! Você é bonita, boazinha, legal e cheirosa. Beijo Arthur
+                    Parabéns tia AIO!! Você é bonita, boazinha, legal e cheirosa. Beijo Arthur
                 </p>
-                <p class="fake-btn">Enviar</p>
+                <p class="fake-btn">Clica aqui em Enviar</p>
             </div>
         </div>
 
