--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
             </svg>
         </div>
 
-
+        <footer style="text-align: center; padding: 1rem; font-size: 0.9rem; color: #777;">
+            &copy; 2025 runmand. Todos os direitos reservados.
+          </footer>
 
 </body>
     <!-- Greensock -->
