--- a/carta.html
+++ b/carta.html
@@ -90,6 +90,8 @@
     </div>
     <div class="card">lolozinha feliz aniversário!!!!! que papai do ceu te traga sempre muitas felicidades, muitos filmes bons, comebacks do le sserafim e pelo menos algumas vitorias do vasco! te amo muito muito muito 🩷🩵🤍 - Luana</div>
   </div>
+  <div class="card">helo te amamos!!! - jenitalia </div>
+  </div>
 </body>
 <footer style="text-align: center; padding: 1rem; font-size: 0.9rem; color: #777;">
   &copy; 2025 runmand. Todos os direitos reservados.
