--- a/carta.html
+++ b/carta.html
@@ -86,12 +86,16 @@
     <div class="card">Te amamos muito, helo!! - Titias</div>
 
     <div class="card">
-  helo, helo, heloooo (voz da larinha) feliz aniversário, minha amiga amada!  muito obrigada pela sua amizade e também quero dizer o tanto que eu te amo e o quanto sou feliz por ter você na minha vida. que hoje — e todos os dias que vierem — você esteja rodeada de tudo que te faz sorrir. que nunca falte saúde, paz, amor e muito carinho. que seus caminhos sejam sempre iluminados, e que você continue sendo essa amiga incrível e generosa que é. te amo demais, de um jeito que nem dá pra explicar. obrigada por existir e por dividir a vida comigo. com todo meu coração: feliz vida, amiga. que Deus te abençoe sempre!- carol saphadynne
+      helo, helo, heloooo (voz da larinha) feliz aniversário, minha amiga amada!  muito obrigada pela sua amizade e também quero dizer o tanto que eu te amo e o quanto sou feliz por ter você na minha vida. que hoje — e todos os dias que vierem — você esteja rodeada de tudo que te faz sorrir. que nunca falte saúde, paz, amor e muito carinho. que seus caminhos sejam sempre iluminados, e que você continue sendo essa amiga incrível e generosa que é. te amo demais, de um jeito que nem dá pra explicar. obrigada por existir e por dividir a vida comigo. com todo meu coração: feliz vida, amiga. que Deus te abençoe sempre!- carol saphadynne
     </div>
+
     <div class="card">lolozinha feliz aniversário!!!!! que papai do ceu te traga sempre muitas felicidades, muitos filmes bons, comebacks do le sserafim e pelo menos algumas vitorias do vasco! te amo muito muito muito 🩷🩵🤍 - Luana</div>
+
+    <div class="card">Helo te amamos, nossa NB favorita — Jenitalia 💜</div>
+
+    <div class="card">Gostosa - moonbyelle</div>
   </div>
-  <div class="card">helo te amamos!!! - jenitalia </div>
-  </div>
+  
 </body>
 <footer style="text-align: center; padding: 1rem; font-size: 0.9rem; color: #777;">
   &copy; 2025 runmand. Todos os direitos reservados.
