--- a/carta.html
+++ b/carta.html
@@ -91,7 +91,9 @@
 
     <div class="card">lolozinha feliz aniversário!!!!! que papai do ceu te traga sempre muitas felicidades, muitos filmes bons, comebacks do le sserafim e pelo menos algumas vitorias do vasco! te amo muito muito muito 🩷🩵🤍 - Luana</div>
 
-    <div class="card">Helo te amamos, nossa NB favorita — Jenitalia 💜</div>
+    <div class="card">heloooo feliz aniversário! desejo que venha um ano maravilhoso pela frente, com muitos filmes bons pra ver, livros pra colorir e encontros das titias pra gente se amar. ❤️ - jeni</div>
+
+    <div class="card">te amo mais que lady gaga - nati </div>
 
     <div class="card">Gostosa - moonbyelle</div>
   </div>
